syntax = "proto3";
package location.service;

option java_multiple_files = true;
option java_package = "dev.ngdangkiet.dkmicroservices.location.protobuf";
option java_outer_classname = "LocationProtobuf";

message PLocation {
  string address = 1;
  string longitude = 2;
  string latitude = 3;
  string fromLocation = 4;
  string toLocation = 5;
}

// PRequest
message PGetLocationRequest {
  string address = 1;
  string fromLocation = 2;
  string toLocation = 3;
  string env = 4;
}

// PResponse
message PLocationResponse {
  string address = 1;
  string fromLocation = 2;
  string toLocation = 3;
  string env = 4;
  double distance = 5;
}

message PLocationsResponse {
  //  repeated PLocation data = 1;
  repeated string addresses = 1;
}